Adapting for Heroku

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,12 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.e4e4f30f348a61a8ce6a.hot-update.js": "/0.e4e4f30f348a61a8ce6a.hot-update.js",
-    "/0.ca5aa30062bc3102b565.hot-update.js": "/0.ca5aa30062bc3102b565.hot-update.js",
-    "/0.f95af467a870d9ab64ea.hot-update.js": "/0.f95af467a870d9ab64ea.hot-update.js",
-    "/0.6c1d9e8c700bc241d9fa.hot-update.js": "/0.6c1d9e8c700bc241d9fa.hot-update.js",
-    "/0.94eeeec14ad27ec54637.hot-update.js": "/0.94eeeec14ad27ec54637.hot-update.js",
-    "/0.672eaec89bf2493acfa8.hot-update.js": "/0.672eaec89bf2493acfa8.hot-update.js",
-    "/0.1ffd3b4524b1141c8c00.hot-update.js": "/0.1ffd3b4524b1141c8c00.hot-update.js",
-    "/0.9daf6ea5e810ab3c8325.hot-update.js": "/0.9daf6ea5e810ab3c8325.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
