Played with regex toggle style.

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,25 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.21312dc3111f5ef9c950.hot-update.js": "/0.21312dc3111f5ef9c950.hot-update.js",
-    "/0.b2a00233a04c461de014.hot-update.js": "/0.b2a00233a04c461de014.hot-update.js",
-    "/0.ec726efb0e1fcf918e22.hot-update.js": "/0.ec726efb0e1fcf918e22.hot-update.js",
-    "/0.6f17f1dd9eca87a7c859.hot-update.js": "/0.6f17f1dd9eca87a7c859.hot-update.js",
-    "/0.19f252e42f3f98b3b985.hot-update.js": "/0.19f252e42f3f98b3b985.hot-update.js",
-    "/0.ba64a79a2751b771eab4.hot-update.js": "/0.ba64a79a2751b771eab4.hot-update.js",
-    "/0.f5b90e0be6a1798b2d11.hot-update.js": "/0.f5b90e0be6a1798b2d11.hot-update.js",
-    "/0.e4e87cae278ca166ca57.hot-update.js": "/0.e4e87cae278ca166ca57.hot-update.js",
-    "/0.7fde1d8098eadf7459fc.hot-update.js": "/0.7fde1d8098eadf7459fc.hot-update.js",
-    "/0.7b5159db2d4fbf8717ab.hot-update.js": "/0.7b5159db2d4fbf8717ab.hot-update.js",
-    "/0.5a08551f82bed6f5e391.hot-update.js": "/0.5a08551f82bed6f5e391.hot-update.js",
-    "/0.129b431e24d86522d73b.hot-update.js": "/0.129b431e24d86522d73b.hot-update.js",
-    "/0.5bbd47b0528698e600cd.hot-update.js": "/0.5bbd47b0528698e600cd.hot-update.js",
-    "/0.76bf00f32047a50d72d5.hot-update.js": "/0.76bf00f32047a50d72d5.hot-update.js",
-    "/0.374528c36a6b2f289988.hot-update.js": "/0.374528c36a6b2f289988.hot-update.js",
-    "/0.63f9e239a52a65526096.hot-update.js": "/0.63f9e239a52a65526096.hot-update.js",
-    "/0.ac5c0de80df52ea6695f.hot-update.js": "/0.ac5c0de80df52ea6695f.hot-update.js",
-    "/0.9c0cc0cda4045c3dddb6.hot-update.js": "/0.9c0cc0cda4045c3dddb6.hot-update.js",
-    "/0.ed5d84ea069764a96a02.hot-update.js": "/0.ed5d84ea069764a96a02.hot-update.js",
-    "/0.741ffc0fc6ca533ef1a8.hot-update.js": "/0.741ffc0fc6ca533ef1a8.hot-update.js",
-    "/0.ff73d0b9f9263b0a3c91.hot-update.js": "/0.ff73d0b9f9263b0a3c91.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
